--- a/presentation/Fuel Efficiency Predictor/index.html
+++ b/presentation/Fuel Efficiency Predictor/index.html
@@ -63,7 +63,7 @@
 <li><p>Applications - Car Design and Evaluation</p>
 
 <ul>
-<li>How fast can I make the car and still meet required fuel effiency?</li>
+<li>How can I make a fast car that meets required fuel effiency?</li>
 <li>Is actual car fuel efficiency within predicted range?</li>
 </ul></li>
 </ul>
